--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-ultralytics==8.3.203
-opencv-python-headless==4.8.0.74
-numpy==1.25.0
-matplotlib==3.8.0
-albumentations==1.3.0
-pyzbar==0.1.9
-tqdm==4.66.1
+ultralytics==8.2.0
+opencv-python
+numpy
+matplotlib
+pillow
