--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-# Python 3.9+ recommended
-ultralytics==8.0.176
-opencv-python-headless==4.7.0.72
-numpy==1.25.2
-tqdm==4.66.1
-pandas==2.2.2
-pyyaml==6.0
+ultralytics
+opencv-python-headless
+pillow
+pyzbar
+tqdm
+numpy
+pandas
