--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-ultralytics
-opencv-python-headless
-pillow
-pyzbar
-tqdm
+ultralytics>=8.0.0
+torch>=2.0.0
+torchvision>=0.15.0
 numpy
-pandas
+opencv-python
+Pillow
+matplotlib
+pyyaml
+tqdm
